changed the dark grey colour to a much darker shade of grey

--- a/assets/sass/utils/_variables.scss
+++ b/assets/sass/utils/_variables.scss
@@ -5,7 +5,7 @@ $white: #f8f8ff;
 $black: #2f2f2f;
 $blue: #3366cc;
 // added pink colour because I love pink <3
-$pink: $f071d6;
+$pink: #f071d6;
 $backgroundDarker: #252627;
 $backgroundDark: #292a2d;
 
