darker grey for the home body

--- a/assets/sass/utils/_variables.scss
+++ b/assets/sass/utils/_variables.scss
@@ -7,7 +7,7 @@ $blue: #3366cc;
 // added pink colour because I love pink <3
 $pink: #f071d6;
 $backgroundDarker: #252627;
-$backgroundDark: #292a2d;
+$backgroundDark: #121212;
 
 //Fonts
 $fontHeader: 'Fira Mono', monospace;
