--- a/assets/sass/utils/_variables.scss
+++ b/assets/sass/utils/_variables.scss
@@ -1,12 +1,11 @@
 // Colors
-//$darkGrey: #323232; -- orig
 $darkGrey: #121212;
 $white: #f8f8ff;
 $black: #2f2f2f;
 $blue: #3366cc;
 // added pink colour because I love pink <3
 $pink: #f071d6;
-$backgroundDarker: #252627;
+$backgroundDarker: #0a0a0a;
 $backgroundDark: #121212;
 
 //Fonts
