--- a/assets/sass/components/_footer.scss
+++ b/assets/sass/components/_footer.scss
@@ -1,6 +1,7 @@
 @import "../utils/variables";
 
 .footer {
+font-family: $fontHeader;
   padding: 15px;
   text-align: center;
   background-color: $backgroundDarker;
